--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Django>=4.2.0,<5.0.0
-djangorestframework>=3.14.0
-python-decouple>=3.8
-pandas>=2.0.0
-openpyxl>=3.1.0
-psycopg2-binary>=2.9.0
-
+djangorestframework>=3.14.0,<4.0.0
+python-decouple>=3.8,<4.0.0
+pandas>=2.0.0,<3.0.0
+openpyxl>=3.1.0,<4.0.0
+psycopg2-binary>=2.9.0,<3.0.0
